--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   </head>
 
   <body>
-    <iframe scrolling="overflow-x:hidden" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FojXEXrChHMuG0EgUIRi7gE%2FPortfolio%3Fnode-id%3D1%253A9%26scaling%3Dscale-down-width" allowfullscreen></iframe>
-    <div id="header">Sameer - Portfolio</div>
+    <iframe scrolling="overflow-x:hidden" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fn0V7UHFf6iZK4AUeLwpzS1%2FPortfolio%3Fnode-id%3D1%253A9%26viewport%3D155%252C24%252C0.4750732481479645%26scaling%3Dscale-down-width" allowfullscreen></iframe>
+    
+    
+    <div id="header">Sam - Portfolio</div>
     </div>
   </body>
 </html>
