--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Portfolio Sameer</title>
+    <title>Portfolio Sameer Rehman</title>
     <link rel="stylesheet" type='text/css' media='all' href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <script>
@@ -14,7 +14,7 @@
     <iframe scrolling="overflow-x:hidden" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fn0V7UHFf6iZK4AUeLwpzS1%2FPortfolio%3Fnode-id%3D1%253A9%26viewport%3D155%252C24%252C0.4750732481479645%26scaling%3Dscale-down-width" allowfullscreen></iframe>
     
     
-    <div id="header">Sam - Portfolio</div>
+    <div id="header">Sameer Rehman - Portfolio</div>
     </div>
   </body>
 </html>
