--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <html>
   <head>
+    
     <title>Portfolio Sameer Rehman</title>
+    <script type = "text/javascript">
+
+         <!--
+
+            function Redirect() {
+
+               window.location = "https://acre-method-39576642.figma.site/";
+
+            }
+
+         //-->
+
+      </script>
     <link rel="stylesheet" type='text/css' media='all' href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   </head>
