--- a/index.html
+++ b/index.html
@@ -1,18 +1,7 @@
 <html>
   <head>
     
-    <title>Portfolio Sameer Rehman</title>
-    <script type = "text/javascript">
-
-         <!--
-
-               window.location = "https://acre-method-39576642.figma.site/";
-
-
-
-         //-->
-
-      </script>
+    <title>Portfolio | Sameer Rehman | Product Designer with 💜 </title>
     <link rel="stylesheet" type='text/css' media='all' href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   </head>
